--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   flutter_bloc:
   equatable:
   dartz:
+  google_sign_in: ^5.0.6
+  firebase_core: ^3.6.0
+  firebase_messaging: ^15.1.3
   get_it:
   shared_preferences:
   go_router:
