--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,12 +38,15 @@ dependencies:
   dio:
   flutter_bloc:
   equatable:
+  animated_custom_dropdown: ^3.1.1
+  flutter_svg: ^2.0.10+1
   dartz:
   google_sign_in: ^5.0.6
   firebase_core: ^3.6.0
   firebase_messaging: ^15.1.3
   get_it:
   shared_preferences:
+  flutter_local_notifications:
   go_router:
   google_fonts:
   intl:
