--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,28 +1,79 @@
-# This file configures the analyzer, which statically analyzes Dart code to
-# check for errors, warnings, and lints.
-#
-# The issues identified by the analyzer are surfaced in the UI of Dart-enabled
-# IDEs (https://dart.dev/tools#ides-and-editors). The analyzer can also be
-# invoked from the command line by running `flutter analyze`.
-
-# The following line activates a set of recommended lints for Flutter apps,
-# packages, and plugins designed to encourage good coding practices.
 include: package:flutter_lints/flutter.yaml
 
 linter:
-  # The lint rules applied to this project can be customized in the
-  # section below to disable rules from the `package:flutter_lints/flutter.yaml`
-  # included above or to enable additional rules. A list of all available lints
-  # and their documentation is published at https://dart.dev/lints.
-  #
-  # Instead of disabling a lint rule for the entire project in the
-  # section below, it can also be suppressed for a single line of code
-  # or a specific dart file by using the `// ignore: name_of_lint` and
-  # `// ignore_for_file: name_of_lint` syntax on the line or in the file
-  # producing the lint.
   rules:
-    # avoid_print: false  # Uncomment to disable the `avoid_print` rule
-    # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
+    # Core Lint Rules for Clean Architecture
+    avoid_returning_null_for_future: true
+    avoid_returning_this: true
+    close_sinks: true
+    cancel_subscriptions: true
+    prefer_const_constructors: true
+    prefer_const_constructors_in_immutables: true
+    unnecessary_getters_setters: true
+    use_build_context_synchronously: true
 
-# Additional information about this file can be found at
-# https://dart.dev/guides/language/analysis-options
+    # Enforce Code Structure and Readability
+    sort_child_properties_last: true
+    sort_constructors_first: true
+    prefer_typing_uninitialized_variables: true
+    prefer_if_elements_to_conditional_expressions: true
+    avoid_empty_else: true
+    avoid_print: true
+    no_runtimeType_toString: true
+    lines_longer_than_80_chars: true
+    prefer_single_quotes: true
+    prefer_interpolation_to_compose_strings: true
+    unnecessary_brace_in_string_interps: true
+    unnecessary_this: true
+    unnecessary_const: true
+    unnecessary_new: true
+    unnecessary_null_aware_assignments: true
+
+    # Code Consistency and Best Practices
+    avoid_dynamic_calls: true
+    avoid_null_checks_in_equality_operators: true
+    avoid_types_as_parameter_names: true
+    avoid_unnecessary_containers: true
+    constant_identifier_names: true
+    prefer_asserts_with_message: true
+    prefer_conditional_assignment: true
+    prefer_collection_literals: true
+    prefer_if_null_operators: true
+    prefer_spread_collections: true
+    prefer_mixin: true
+    prefer_void_to_null: true
+    provide_deprecation_message: true
+    require_trailing_commas: true
+    sized_box_for_whitespace: true
+    type_annotate_public_apis: true
+    valid_regexps: true
+
+    # Bloc and Asynchronous Code Management
+    await_only_futures: true
+    avoid_void_async: true
+    unawaited_futures: true
+    avoid_catches_without_on_clauses: true
+    avoid_slow_async_io: true
+    avoid_web_libraries_in_flutter: true
+
+    # Clean Architecture Specifics
+    avoid_relative_lib_imports: true
+    implementation_imports: true
+    avoid_private_typedef_functions: true
+    prefer_relative_imports: true
+    avoid_annotating_with_dynamic: true
+    avoid_function_literals_in_foreach_calls: true
+    always_declare_return_types: true
+
+analyzer:
+  exclude:
+    - "**/*.g.dart"
+    - "**/*.freezed.dart"
+    - "**/*.part.dart"
+    - "lib/presentation/widgets/**"  # Exclude generated widgets if needed
+    - "lib/data/models/**"
+    - "lib/data/dtos/**"
+
+  strong-mode:
+    implicit-casts: false
+    implicit-dynamic: false
