--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   connectivity_plus: ^6.0.5
   flutter_svg: ^2.0.10+1
   animated_custom_dropdown: ^3.1.1
+  flutter_local_notifications: ^17.2.3
 
 dev_dependencies:
   flutter_test:
