--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   flutter_svg: ^2.0.10+1
   animated_custom_dropdown: ^3.1.1
   flutter_local_notifications: ^17.2.3
+  flutter_native_splash: ^2.4.1
 
 dev_dependencies:
   flutter_test:
